# agent-alternance

./: .env.example  .gitignore  BUILDER.bat  BUILDER_APP.bat  BUILDER_WEB.bat  CONTEXTE_CONVERSATION.md  GUIDE_UTILISATEUR.md  INSTALLER.bat  LANCER.bat  LISEZ-MOI.md  README.md  agent-alternance-app.spec  agent-alternance-web.spec  agent-alternance.spec  config.py  desktop.py  desktop_app.py  desktop_web.py  logger.py  pyproject.toml
.github/workflows/: ci.yml
api/: deps.py  main.py  schemas.py  tasks.py
api/routes/: candidature.py  profil.py  qualification.py  sourcing.py  suivi.py
candidature/: __init__.py  cv_adapter.py  fiche_entretien.py  generateur.py  reponses_questions.py  runner.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: FreshnessPanel.jsx  Layout.jsx  ProfileEditor.jsx  StatsDetailed.jsx  TaskBar.jsx  Toast.jsx
frontend/src/pages/: Dashboard.jsx  Offres.jsx  Onboarding.jsx
profil/: extracteur.py  generateur_profil.py
qualification/: __init__.py  runner.py  scorer.py
sourcing/: __init__.py  freshness.py  models.py  runner.py
sourcing/scrapers/: base.py  demo.py  indeed.py  lba.py  wttj.py
suivi/: __init__.py  dashboard.py  runner.py  tracker.py
tests/: conftest.py  test_api_sourcing.py  test_api_suivi.py  test_api_system.py  test_config.py  test_models.py  test_tracker.py
